--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -4,15 +4,46 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.cte1.stack_overflow.SubActivity">
+    tools:context="com.example.cte1.stack_overflow.SubActivity"
+    android:orientation="vertical">
 
 
     <ListView
         android:id="@+id/listview"
-        android:layout_height="match_parent"
+        android:layout_height="405dp"
         android:layout_width="match_parent"
         android:divider="#ffcc22"
         android:dividerHeight="1.5dp"
         android:choiceMode="singleChoice" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이전"
+            android:id="@+id/button"
+            android:layout_gravity="center" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="새로고침"
+
+            android:id="@+id/button2"
+            android:layout_gravity="center" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="다음"
+            android:id="@+id/button3"
+            android:layout_gravity="center" />
+    </LinearLayout>
+
 
 </LinearLayout>
