--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,14 +12,14 @@
         android:id="@+id/action_signin"
         android:orderInCategory="100"
         android:title="@string/action_signin"
-        app:showAsAction="withText|always"
+        app:showAsAction="withText"
         android:icon="@drawable/abc_ic_clear_mtrl_alpha"/>
 
     <item
         android:id="@+id/action_login"
         android:orderInCategory="100"
         android:title="@string/action_login"
-        app:showAsAction="withText|always"
+        app:showAsAction="withText"
         android:icon="@drawable/abc_ic_menu_cut_mtrl_alpha"/>
 
     <item
